Add shift+cmd/ctrl+f12 for IntelliJ equivalence

--- a/package.json
+++ b/package.json
@@ -7,8 +7,8 @@
     "url": "https://github.com/grgar/vscode-sidebars"
   },
   "description": "The correct toggle for sidebars and panels",
-  "icon": "images/icon-small.png",
-  "version": "0.1.0",
+  "icon": "images/icon.png",
+  "version": "0.2.0",
   "license": "MIT",
   "engines": {
     "vscode": "^1.74.0"
@@ -337,6 +337,317 @@
       {
         "key": "shift+ctrl+alt+0",
         "mac": "shift+alt+cmd+0",
+        "command": "runCommands",
+        "args": {
+          "commands": [
+            "workbench.action.toggleSidebarVisibility",
+            "workbench.action.toggleAuxiliaryBar",
+            "workbench.action.togglePanel"
+          ]
+        },
+        "when": "!sideBarVisible && !auxiliaryBarVisible && !panelVisible && grg.sidebars.primary && grg.sidebars.secondary && grg.sidebars.panel"
+      },
+      {
+        "key": "shift+ctrl+f12",
+        "mac": "shift+cmd+f12",
+        "command": "runCommands",
+        "args": {
+          "commands": [
+            {
+              "command": "_setContext",
+              "args": [
+                "grg.sidebars.primary",
+                true
+              ]
+            },
+            {
+              "command": "_setContext",
+              "args": [
+                "grg.sidebars.secondary",
+                false
+              ]
+            },
+            {
+              "command": "_setContext",
+              "args": [
+                "grg.sidebars.panel",
+                false
+              ]
+            },
+            "workbench.action.closeSidebar"
+          ]
+        },
+        "when": "sideBarVisible && !auxiliaryBarVisible && !panelVisible"
+      },
+      {
+        "key": "shift+ctrl+f12",
+        "mac": "shift+cmd+f12",
+        "command": "runCommands",
+        "args": {
+          "commands": [
+            {
+              "command": "_setContext",
+              "args": [
+                "grg.sidebars.primary",
+                true
+              ]
+            },
+            {
+              "command": "_setContext",
+              "args": [
+                "grg.sidebars.secondary",
+                true
+              ]
+            },
+            {
+              "command": "_setContext",
+              "args": [
+                "grg.sidebars.panel",
+                false
+              ]
+            },
+            "workbench.action.closeSidebar",
+            "workbench.action.closeAuxiliaryBar"
+          ]
+        },
+        "when": "sideBarVisible && auxiliaryBarVisible && !panelVisible"
+      },
+      {
+        "key": "shift+ctrl+f12",
+        "mac": "shift+cmd+f12",
+        "command": "runCommands",
+        "args": {
+          "commands": [
+            {
+              "command": "_setContext",
+              "args": [
+                "grg.sidebars.primary",
+                true
+              ]
+            },
+            {
+              "command": "_setContext",
+              "args": [
+                "grg.sidebars.secondary",
+                true
+              ]
+            },
+            {
+              "command": "_setContext",
+              "args": [
+                "grg.sidebars.panel",
+                true
+              ]
+            },
+            "workbench.action.closePanel",
+            "workbench.action.closeSidebar",
+            "workbench.action.closeAuxiliaryBar"
+          ]
+        },
+        "when": "sideBarVisible && auxiliaryBarVisible && panelVisible"
+      },
+      {
+        "key": "shift+ctrl+f12",
+        "mac": "shift+cmd+f12",
+        "command": "runCommands",
+        "args": {
+          "commands": [
+            {
+              "command": "_setContext",
+              "args": [
+                "grg.sidebars.primary",
+                true
+              ]
+            },
+            {
+              "command": "_setContext",
+              "args": [
+                "grg.sidebars.secondary",
+                false
+              ]
+            },
+            {
+              "command": "_setContext",
+              "args": [
+                "grg.sidebars.panel",
+                true
+              ]
+            },
+            "workbench.action.closePanel",
+            "workbench.action.closeSidebar"
+          ]
+        },
+        "when": "sideBarVisible && !auxiliaryBarVisible && panelVisible"
+      },
+      {
+        "key": "shift+ctrl+f12",
+        "mac": "shift+cmd+f12",
+        "command": "runCommands",
+        "args": {
+          "commands": [
+            {
+              "command": "_setContext",
+              "args": [
+                "grg.sidebars.primary",
+                false
+              ]
+            },
+            {
+              "command": "_setContext",
+              "args": [
+                "grg.sidebars.secondary",
+                true
+              ]
+            },
+            {
+              "command": "_setContext",
+              "args": [
+                "grg.sidebars.panel",
+                true
+              ]
+            },
+            "workbench.action.closeAuxiliaryBar",
+            "workbench.action.closePanel"
+          ]
+        },
+        "when": "!sideBarVisible && auxiliaryBarVisible && panelVisible"
+      },
+      {
+        "key": "shift+ctrl+f12",
+        "mac": "shift+cmd+f12",
+        "command": "runCommands",
+        "args": {
+          "commands": [
+            {
+              "command": "_setContext",
+              "args": [
+                "grg.sidebars.primary",
+                false
+              ]
+            },
+            {
+              "command": "_setContext",
+              "args": [
+                "grg.sidebars.secondary",
+                false
+              ]
+            },
+            {
+              "command": "_setContext",
+              "args": [
+                "grg.sidebars.panel",
+                true
+              ]
+            },
+            "workbench.action.closePanel"
+          ]
+        },
+        "when": "!sideBarVisible && !auxiliaryBarVisible && panelVisible"
+      },
+      {
+        "key": "shift+ctrl+f12",
+        "mac": "shift+cmd+f12",
+        "command": "runCommands",
+        "args": {
+          "commands": [
+            {
+              "command": "_setContext",
+              "args": [
+                "grg.sidebars.primary",
+                false
+              ]
+            },
+            {
+              "command": "_setContext",
+              "args": [
+                "grg.sidebars.secondary",
+                true
+              ]
+            },
+            {
+              "command": "_setContext",
+              "args": [
+                "grg.sidebars.panel",
+                false
+              ]
+            },
+            "workbench.action.closeAuxiliaryBar"
+          ]
+        },
+        "when": "!sideBarVisible && auxiliaryBarVisible && !panelVisible"
+      },
+      {
+        "key": "shift+ctrl+f12",
+        "mac": "shift+cmd+f12",
+        "command": "runCommands",
+        "args": {
+          "commands": [
+            "workbench.action.toggleSidebarVisibility"
+          ]
+        },
+        "when": "!sideBarVisible && !auxiliaryBarVisible && !panelVisible && grg.sidebars.primary && !grg.sidebars.secondary && !grg.sidebars.panel"
+      },
+      {
+        "key": "shift+ctrl+f12",
+        "mac": "shift+cmd+f12",
+        "command": "runCommands",
+        "args": {
+          "commands": [
+            "workbench.action.toggleAuxiliaryBar"
+          ]
+        },
+        "when": "!sideBarVisible && !auxiliaryBarVisible && !panelVisible && !grg.sidebars.primary && grg.sidebars.secondary && !grg.sidebars.panel"
+      },
+      {
+        "key": "shift+ctrl+f12",
+        "mac": "shift+cmd+f12",
+        "command": "runCommands",
+        "args": {
+          "commands": [
+            "workbench.action.togglePanel"
+          ]
+        },
+        "when": "!sideBarVisible && !auxiliaryBarVisible && !panelVisible && !grg.sidebars.primary && !grg.sidebars.secondary && grg.sidebars.panel"
+      },
+      {
+        "key": "shift+ctrl+f12",
+        "mac": "shift+cmd+f12",
+        "command": "runCommands",
+        "args": {
+          "commands": [
+            "workbench.action.toggleSidebarVisibility",
+            "workbench.action.toggleAuxiliaryBar"
+          ]
+        },
+        "when": "!sideBarVisible && !auxiliaryBarVisible && !panelVisible && grg.sidebars.primary && grg.sidebars.secondary && !grg.sidebars.panel"
+      },
+      {
+        "key": "shift+ctrl+f12",
+        "mac": "shift+cmd+f12",
+        "command": "runCommands",
+        "args": {
+          "commands": [
+            "workbench.action.toggleAuxiliaryBar",
+            "workbench.action.togglePanel"
+          ]
+        },
+        "when": "!sideBarVisible && !auxiliaryBarVisible && !panelVisible && !grg.sidebars.primary && grg.sidebars.secondary && grg.sidebars.panel"
+      },
+      {
+        "key": "shift+ctrl+f12",
+        "mac": "shift+cmd+f12",
+        "command": "runCommands",
+        "args": {
+          "commands": [
+            "workbench.action.toggleSidebarVisibility",
+            "workbench.action.togglePanel"
+          ]
+        },
+        "when": "!sideBarVisible && !auxiliaryBarVisible && !panelVisible && grg.sidebars.primary && !grg.sidebars.secondary && grg.sidebars.panel"
+      },
+      {
+        "key": "shift+ctrl+f12",
+        "mac": "shift+cmd+f12",
         "command": "runCommands",
         "args": {
           "commands": [
